--- a/pleres/Cargo.toml
+++ b/pleres/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = {version = "1.8.1", features = ["full"]}
+bluer = "0.10.2"
+getopts = "0.2.21"
